tests/parsing/missing_type/stderr.golden
error: unexpected newline, expected functionality type
bus.fbd +2:6
   |
 2 | 	Proc
   | 	    ^
